<resources>
    <string name="app_name">MotionLayout</string>
    <string name="the_clouds">The clouds</string>
    <string name="gates">Gates</string>
    <string name="tower">Tower</string>

    <string name="example1">Example 1</string>
    <string name="example2">Example 2</string>
    <string name="example3">Example 3</string>
    <string name="example4">Example 4</string>
    <string name="example5">Example 5</string>
    <string name="example6">Example 6</string>






</resources>