<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/btn_clouds"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/the_clouds"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_gates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/gates"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_clouds"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn_tower"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/tower"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_gates"
        app:layout_constraintVertical_bias="0.0" />


    <Button
        android:id="@+id/btn_exam1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/example1"
        app:layout_constraintEnd_toStartOf="@+id/btn_exam2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_exam2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/example2"
        app:layout_constraintEnd_toStartOf="@+id/btn_exam3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_exam1"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_exam3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/example3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_exam2"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/btn_exam4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/example4"
        app:layout_constraintEnd_toEndOf="@+id/btn_exam1"
        app:layout_constraintStart_toStartOf="@+id/btn_exam1"
        app:layout_constraintTop_toBottomOf="@+id/btn_exam1" />

    <Button
        android:id="@+id/btn_exam5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/example5"
        app:layout_constraintEnd_toEndOf="@+id/btn_exam2"
        app:layout_constraintStart_toStartOf="@+id/btn_exam2"
        app:layout_constraintTop_toBottomOf="@+id/btn_exam2" />

    <Button
        android:id="@+id/btn_exam6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/example6"
        app:layout_constraintEnd_toEndOf="@+id/btn_exam3"
        app:layout_constraintStart_toStartOf="@+id/btn_exam3"
        app:layout_constraintTop_toBottomOf="@+id/btn_exam3" />


</androidx.constraintlayout.widget.ConstraintLayout>